Added a bit to methodology observations 1. Restructured chapter 4 - iteration considereations

--- a/Content/Iteration/1stIteration.tex
+++ b/Content/Iteration/1stIteration.tex
@@ -1,4 +1,4 @@
-\section{1st Iteration}
+\subsection{1st Iteration}
 The goal for the 1st release was to create a music player on the android smartphone platform that should be usable while running. 
 
 \Kristian{consider if we should have use cases here.}
