--- a/Content/Iteration/iteration.tex
+++ b/Content/Iteration/iteration.tex
@@ -1,7 +1,12 @@
 \input{Content/Iteration/introduction}
-\input{Content/Iteration/1stIteration}
-\input{Content/Iteration/2ndIteration}
-\input{Content/Iteration/3rdIteration}
-\input{Content/Iteration/4thIteration}
-\input{Content/Iteration/5thIteration}
-\input{Content/Iteration/6thIteration}
+\section{1st Release}
+\input{Content/Iteration/release1}
+
+\section{2nd Release}
+\input{Content/Iteration/release2}
+
+\section{3rd Release}
+\input{Content/Iteration/release3}
+
+
+
