--- a/Content/Iteration/methodologyObservations1.tex
+++ b/Content/Iteration/methodologyObservations1.tex
@@ -1,4 +1,4 @@
-\section{Methodology Observations}\label{sec:release1Methodology}
+\subsection{Methodology Observations}\label{sec:release1Methodology}
 Aside from developing the product, Tempo Player, a lot of energy was spent on considering how XP could be used to make the development process as efficient and controlled as possible. We had a clear goal to create high quality code while also keeping track of the development in a way that would allow us to estimate how long a given addition to the project would take, and decide if it is feasibly to include it in the project based on that estimation.
 \Dan{Should we mention this ``clear goal'' before? (We had a clear goal....)}
 In this and the following Methodology Observations sections, we will present some of the more interesting observations we made while working on each release. As stated in LABEL TO RELEVANT XP SECTION all the XP practices are important to gain as much as possible from XP, and all of them were considered (as apparent in the unedited meeting summaries in \Cref{chap:temp}), but three of them are especially interesting when it comes to reaching our goal: pair programming, planning, and refactoring.\\ \Dan{Find LABEL TO RELEVANT XP SECTION}
