Added a bit to methodology observations 1. Restructured chapter 4 - iteration considereations

--- a/Report.tex
+++ b/Report.tex
@@ -30,7 +30,7 @@
 \label{chap:tempoPlayer}
 \input{Content/TempoPlayer/tempoPlayer}
 
-\chapter{Iteration Considerations}
+\chapter{Iterations and Releases}
 \label{chap:iteration}
 \input{Content/Iteration/iteration}
 
