--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -1,5 +1,4 @@
 \section{Extreme Programming explained}
-\Alexander{Extreme Programming vs. eXtreme Programming}
 % 2 XP's: 2000 and 200? - differences.
 % General introduction to XP2k
 Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. 
@@ -115,7 +114,7 @@ Further the best design should be so simple it never has any duplicate code.
 \paragraph{Small Releases} are small and frequently versions of the software, which are tested by the customer.
 These releases does incrementally complete the system.
 
-\paragraph{Testing} is a mindset, in which, unit tests are developed before the code (Test-First Development).
+\paragraph{Testing} is a mindset, in which, unit tests are developed before the code (Test-Driven Development).
 Testing also refers to how the stories and releases are not complete before they pass their respective tests.
 
 %http://www.techrepublic.com/article/extreme-programming-do-these-12-practices-make-perfect/
