Changed chapter titles to match.

--- a/Report.tex
+++ b/Report.tex
@@ -38,11 +38,11 @@
 \label{chap:musicPlayer}
 \input{Content/MusicPlayer/musicPlayer}
 
-\chapter{Song Scanner}
+\chapter{The Song Scanner Module}
 \label{chap:songScanner}
 \input{Content/SongScanner/songScanner}
 
-\chapter{Step Counter}
+\chapter{The Step Counter Module}
 \label{chap:stepCounter}
 \input{Content/StepCounter/stepCounter}
 
