metaphor in reflection methodology

--- a/Content/ReflectionMethodology/reflectionMetaphor.tex
+++ b/Content/ReflectionMethodology/reflectionMetaphor.tex
@@ -1,1 +1,4 @@
 \subsection{Metaphor}
+The application icon, the project title or ``pacer'' can be seen as metaphors, however we never established a formal metaphor. This was not a problem because every group member had the same vision for the product. 
+
+%In regards to the report, the visions for certain chapters could differ and therefore we established a common vision and discussed a metaphor for the report.
