onsite customer reflection methodology

--- a/Content/ReflectionMethodology/reflectionOnSiteCustomer.tex
+++ b/Content/ReflectionMethodology/reflectionOnSiteCustomer.tex
@@ -1,1 +1,4 @@
 \subsection{On-Site Customer}
+For this project we have used surrogate customer, however stepping into the customer role proved difficult. Because we did not properly use a surrogate customer, we did not discuss the project as much as we could have. Additionally we created our acceptance tests late in the process. They should have been created earlier and as a consequence, they are likely to be based on the implementation.
+
+Overall this has not been a big issue, because we were working towards finishing the Minimum Viable Product. The contents of the MVP was been biased towards novelty, whereas a customer might have been more interested in price, usability, and value (cost/value). %This was because we did not gain much from implementing trivial features or nearly identical to existing features.
