simple design reflection methodology

--- a/Content/ReflectionMethodology/reflectionSimpleDesign.tex
+++ b/Content/ReflectionMethodology/reflectionSimpleDesign.tex
@@ -1,1 +1,4 @@
 \subsection{Simple Design}
+Overall, we only wrote code for the functionality we needed. As a consequence, a single issue arose where we forgot that a method was not general, and therefore it was used incorrectly in that particular case. 
+
+We find that we gained more from this practice than we lost implementing it. At times out habit, we tried to predict functionality in the future, which was never used.
