small releases reflection methodology

--- a/Content/ReflectionMethodology/reflectionSmallReleases.tex
+++ b/Content/ReflectionMethodology/reflectionSmallReleases.tex
@@ -1,1 +1,2 @@
 \subsection{Small Releases}
+We had difficulties taking advantage of small releases, since there we had no customers to provide feedback between releases.
