Draft for modifications of xp.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -103,7 +103,7 @@ The development should be seen as a dialogue between the two developers.
 
 \paragraph{Planning Game} is the event where the customer writes user stories, after which, the developers estimates them according to cost.
 
-\paragraph{Refactoring} is the practice used to eradicate bad smells in the code, such as duplicate code.
+\paragraph{Refactoring} is the practice used to eradicate bad smells in the code, e.g. duplicate code.
 
 
 \paragraph{Simple Design} is the best design, and is defined as the easiest that work.
