--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -1,10 +1,19 @@
-\section{Modifications of eXtreme Programming}
-Our modifications of XP.
-Practical applications.
+\section{Modifications of Extreme Programming}
+This project is developed with an education purpose, to which, some requirements and restrictions exist.
+Partly due to these requirements and restrictions, we made some modifications to XP for it to fit inside the project parameters.
 
-e.g. Code Standards are not as important in our project because we are familiar with each other.
+...
+
+\subsection{Code Standards}
+Due to the huge cost of creating a formal code standard in comparison to the benefits, we chose not to do this.
+We were comfortable with this decision, because we had an informal code standard, due to the fact we had worked together before.
 
 
-p.s. remember to mention how we have used \texttt{Essence} retrospective methods.
+\subsection{On-site Customer}
+Since this is a semester project, we will not have an actual customer.
+In place of the on-site customer we will acts as our own surrogate customer.
+This would mean that we are responsible for the priority and requirements decisions, when we act as the surrogate customer.
 
-p.p.s. remember to mention that we use TDD, because it is referred to from Test - Unit Test.
+...
+
+
