--- a/Content/TactileInterface/useCases.tex
+++ b/Content/TactileInterface/useCases.tex
@@ -5,7 +5,7 @@ The user stories on which the implementation of the non-graphical user interface
 {As a user, I, would like to save power by turning off the screen while still being able to navigate songs when the screen is off.
 A screen is turned off when the power button is pressed.}
 {\begin{itemize}
-\item The application can still be controlled after the \texttt{Power} button is pressed.
+\item The application can still be controlled after the \texttt{Power} button is pressed.\Christoffer{Hvilken slags kontrol har vi stadig? play pause stop etc.}
 \end{itemize}}
 {\begin{itemize}
 \item Precondition: 
