temporary future works comments

--- a/Content/Conclusion/futureWork.tex
+++ b/Content/Conclusion/futureWork.tex
@@ -1,2 +1,22 @@
 \section{Future Work}
+\subsection{Application}
+% interval programs
+% offline analysis
+	% minor since we are customers. Why?
+% online album cover
+% adjust music speed
+% integration with music streaming service
+% settings should be expanded
+	% editing of songs (IDx-tags (bpm etc.))
+	% what more?
+% fix cover flow
+% head phone in / out
+% fixed play
+% true NGUI
+% tactile feedback
 
+\subsection{Extreme Programming}
+% determine long-term effect of having a coding standard
+%test
+	% mutation test
+% have customer available
