--- a/Report.tex
+++ b/Report.tex
@@ -54,6 +54,10 @@
 \label{chap:test}
 \input{Content/Test/test}
 
+\chapter{Refactoring}
+\label{chap:refactoring}
+\input{Content/Test/refactoring}
+
 \chapter{Methodology - Reflection}
 \label{chap:reflectionMethodology}
 \input{Content/ReflectionMethodology/reflectionMethodology}
