Renamed Gartner source.

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -141,7 +141,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 
 @misc{gartner:failure,
 	title={Why Critical Program Management is the right decision.},
-	author={Gartner Inc.},
+	author={Gartner},
 	year={2007},
 	howpublished = "\url{http://web.archive.org/web/20070308151701/http://www.gartner.com/it/products/consulting/critical_program_mgmt.jsp}",
 	note = "[Online; Accessed 2015-05-13 but originally showed on 2007-03-08.]"
