--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -32,12 +32,12 @@ Based on this knowledge the second problem can be stated:
 
 %Third Problem - Methodology%
 %\noindent Most large scale software projects fail. 
-\noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail ...”}, and although this is not a large scale project, some of the same pitfalls exist.
+\noindent According to \citet{gartner:failure}{} \textit{``A full 66 percent of large scale projects fail ...”}, and although this is not a large scale project, some of the same pitfalls exist.
 One way to avoid some of these pitfalls, is \textit{``... using a structured systems development methodology ...”}, since it according to \citet{dorsey:methodologyReason} \textit{``... is one of the critical success factors in a systems development project.”}.
 Based on this knowledge the third problem can be stated:
 
 \begin{center}
-	\textit{How do we select and implement a structured systems development methodology?}
+	\textit{How do we select and adapt a structured systems development methodology for our project?}
 \end{center}
 
 \Alexander{Read last problem and compare current version vs previous.}
