Modification to adaptation

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -1,6 +1,6 @@
-\section{Modifications of Extreme Programming}
+\section{Adaptation of Extreme Programming}
 This project is developed with an education purpose, to which, some requirements and restrictions exist.
-Partly due to these requirements and restrictions, we made some modifications to XP for it to fit inside the project parameters.
+Partly due to these requirements and restrictions, we made some adaptations to XP for it to fit inside the project parameters.
 
 ...
 
