Mention XP values in intro.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -3,8 +3,9 @@
 % General introduction to XP2k
 Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. 
 Extreme Programming is supposed to be a lightweight, efficient, and fun approach to developing software.
+One of its core points, and one of the reasons we chose XP, is the fact it contains development oriented practices.
 
-\noindent The methodology consists of the 12 practices:
+\noindent XP is based on the four values \textit{Communication, Courage, Feedback, and Simplicity}, which are implemented through the use of the 12 practices:
 
 \begin{tabularx}{\textwidth}{X X X}
 	40-hour Week				 & Coding Standards & Collective Ownership \\
@@ -18,7 +19,8 @@ While some supports each other, others may be unrelated. (i.e. coding standards 
 \begin{figure}[H]
 	\centering
 	\includegraphics[]{Images/xpPracticeSupport.png}
-		\caption{Map, from page 70 in \textit{Extreme Programming Explained (1999)} \citep{xp:explained}, of the practices and how they support each other. }
+		\caption{Map of the practices and how they support each other.
+			From page 70 in \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. }
 	\label{fig:practiceSupport}
 \end{figure}
 
