Decided to scrap current methodologyObs1

--- a/Content/Iteration/methodologyObservations1.tex
+++ b/Content/Iteration/methodologyObservations1.tex
@@ -1,13 +1,16 @@
 \subsection{Methodology Observations}\label{sec:release1Methodology}
-Aside from developing the product, Tempo Player, a lot of energy was spent on considering how XP could be used to make the development process as efficient and controlled as possible. We had a clear goal to create high quality code while also keeping track of the development in a way that would allow us to estimate how long a given addition to the project would take, and decide if it is feasibly to include it in the project based on that estimation.
-\Dan{Should we mention this ``clear goal'' before? (We had a clear goal....)}
-In this and the following Methodology Observations sections, we will present some of the more interesting observations we made while working on each release. As stated in LABEL TO RELEVANT XP SECTION all the XP practices are important to gain as much as possible from XP, and all of them were considered (as apparent in the unedited meeting summaries in \Cref{chap:temp}), but three of them are especially interesting when it comes to reaching our goal: pair programming, planning, and refactoring.\\ \Dan{Find LABEL TO RELEVANT XP SECTION}
 
 
-Initially, during the first few iterations, we had to take the first steps towards using XP. This did not only include reading Beck's book \Dan{Beck's book}, but also adapting and getting used to the XP practices, so we sat down and pretended to be the customer, talked about some user stories, wrote them down the best we could. We looked at the user stories, turned them into issues, and started a game of planning poker. The issues got an estimation and a priority, and we started working - we did not know how many hours we could actually expect to get done in an iteration yet, but we knew we would not get in trouble with our customer, as it was, in fact, ourselves.
-\Dan{Did we explain planning poker?}
 
-\Ivan{Overvej hvor det er bedst at placere metodologi-observationer. Hvis vi bliver som vi er nu, så skriv observationer der passer til perioden og byg løbende en forståelse op, som bliver analyseret til sidst. Fortæl det gerne som ``historier'', så det er lidt spændende at læse.}
+%Aside from developing the product, Tempo Player, a lot of energy was spent on considering how XP could be used to make the development process as efficient and controlled as possible. We had a clear goal to create high quality code while also keeping track of the development in a way that would allow us to estimate how long a given addition to the project would take, and decide if it is feasibly to include it in the project based on that estimation.
+%\Dan{Should we mention this ``clear goal'' before? (We had a clear goal....)}
+%In this and the following Methodology Observations sections, we will present some of the more interesting observations we made while working on each release. As stated in LABEL TO RELEVANT XP SECTION all the XP practices are important to gain as much as possible from XP, and all of them were considered (as apparent in the unedited meeting summaries in \Cref{chap:temp}), but three of them are especially interesting when it comes to reaching our goal: pair programming, planning, and refactoring.\\ \Dan{Find LABEL TO RELEVANT XP SECTION}
+%
+%
+%Initially, during the first few iterations, we had to take the first steps towards using XP. This did not only include reading Beck's book \Dan{Beck's book}, but also adapting and getting used to the XP practices, so we sat down and pretended to be the customer, talked about some user stories, wrote them down the best we could. We looked at the user stories, turned them into issues, and started a game of planning poker. The issues got an estimation and a priority, and we started working - we did not know how many hours we could actually expect to get done in an iteration yet, but we knew we would not get in trouble with our customer, as it was, in fact, ourselves.
+%\Dan{Did we explain planning poker?}
+%
+%\Ivan{Overvej hvor det er bedst at placere metodologi-observationer. Hvis vi bliver som vi er nu, så skriv observationer der passer til perioden og byg løbende en forståelse op, som bliver analyseret til sidst. Fortæl det gerne som ``historier'', så det er lidt spændende at læse.}
 
 %The music player was the first module that was implemented, as this is the core functionality of the application, without which the rest of the features would lose their purpose. In this section we will describe the observations we made during The bulk of the music player was implemented during the first iteration, and this was also the period where XP was
 
