added source for media player

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -163,4 +163,12 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
     note = "[Online; Accessed 2015-05-19.]"
 }
 
+@misc{android:MediaPlayer,
+    title={MediaPlayer},
+    author={Google Android},
+    year={2015},
+    howpublished = "\url{http://developer.android.com/reference/android/media/MediaPlayer.html}",
+    note = "[Online; Accessed 2015-05-21.]"
+}
+
 
