--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -12,5 +12,5 @@ Because this class is responsible for managing so many things, that it was neces
 \Dan{Please rewrite this to make more sense.}
 
 \subsection{MusicPlayerService} 
-
+This service handles the playing of the music files, this is done with the \texttt{MediaPlayer} \citet{android:MediaPlayer} which is part of the android API. 
 \Dan{Fit this stuff in:} We found that trying to stop the music player while not loaded caused it to skip to next song. It was due to the fact this was an illegal action in that state, as seen in Figure (Android graph over mediaplayer states). We fixed this issue by implementing something, as seen in Listing (Code snipped of interesting code).
