Rewrote intro to xp explained.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -14,8 +14,8 @@ One of its core points, and one of the reasons we chose XP, is the fact it conta
 	Simple Design          		  & Small Releases   	& Testing             
 \end{tabularx}
 
-Some of these practices are more engrained than others. 
-While some supports each other, others may be unrelated. (i.e. coding standards supports collective ownership, but on-site customer and pair programming are unrelated.) The complete map can be seen here:
+These practices also supports each other (e.g. a coding standard supports pair programming) in such a way it creates a synergistic effect.
+The complete map of which practices supports each other can be seen in \Cref{fig:practiceSupport}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[]{Images/xpPracticeSupport.png}
