--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -8,8 +8,7 @@ This class is named based on the fact that it will update dynamically, depending
 \subsection{MusicPlayerActivity}
 This is the central point of the application, responsible for managing the rest of the application and giving the user a way of interacting with it. Is starts the \texttt{MusicPlayerService}, calls the \texttt{DynamicQueue} for songs to play, attaches listeners to the buttons, making them clickable, and it checks that there are enough songs in the specified folder, sending the user to the settings menu if this is not the case.
 
-Because this class is responsible for managing so many things, that it was necessary to move some of its functionality to another class, \texttt{Initializers}, to prevent \texttt{MusicPlayerActivity} from becoming too confusing. \texttt{Initializers} is responsible for all the methods to set click listeners, and initialize the dynamic queue and the cover flow, which shows the album cover of each song in the queue.
-\Dan{Please rewrite this to make more sense.}
+In order to manage the responsibilities associated with the activity, general initialisation has its own class \texttt{Initializers}. \texttt{Initializers} is responsibility for setting \texttt{OnClickListeners} for the GUI and preparing the first song in the queue and coverflow. 
 
 \subsection{MusicPlayerService} 
 This service handles the playing of the music files, this is done with the \texttt{MediaPlayer} class which is part of the \citet{android:MediaPlayer} API. The service is responsible for setting up event listeners and act as an interface to the \texttt{MediaPlayer}.  
