--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -24,72 +24,19 @@ The complete map of which practices supports each other can be seen in \Cref{fig
 	\label{fig:practiceSupport}
 \end{figure}
 
+\paragraph{40-hour Week} is the suggested length of a work week in an XP project.
+This relative short week is practised because one needs to be on the top of their game when working.
+Being well rested and energised should reduce the number of mistakes, as well as increasing patience when pair programming.
 
+\paragraph{Coding Standards} reduces the time it takes to understand code written by others.
+A coding standard ensures all developers write code in the same way.
+This facilitates refactoring, pair programming, and encourages collective ownership.
 
-\subsection{40-hour Week}
-%Why
-This practice is created to ensure the developers are well rested and fresh when they come in to work.
+\paragraph{Collective Ownership} allows all everyone to refactor and review the code.
+When no one person owns part of the code, collaboration is enforces while tedious change request are avoided.
 
-%How/What
-As the name suggests, the practice encourages developers not to work more than 40 hours per week. 
-Although this practice is called 40-hour Week, it should not necessarily be specified to 40 hours per week.
-The correct week length will depend on the specific team.
-
-%Coherent
-This practice is basis for many of the other practices, as one needs to be well rested to think straight and be creative.
-On the other hand, for this practice to work it is required that there are enough tasks to solve.
-These tasks are created through the Planning Game practice, hence making it a prerequisite for the 40-hour Week practice to work. 
-
-\subsection{Coding Standards}
-%Why
-When a project is written by many different developers, it is important that the code are easily understood by other developers.
-Otherwise it would waste a lot of time every time a developer has to extend existing code.
-
-%How/What
-The practice is all about writing code in a agreed upon format.
-This ensure the code are consistent and easy for all developers to understand.
-
-%Coherent
-This practice encourages the Collective Ownership, Pair Programming, and Refactoring practice.
-%Collective
-By making it impossible to distinguish between who wrote what code, it eliminates the tendency to say ``I don't understand this, it is not my code”. Instead the developer instantly understands the purpose, as it is written in a format he understands.\\
-%Pair
-Pair Programming in and of itself is challenging enough. If you additionally do not understand each others way of coding, it becomes almost impossible. 
-A mutual Coding Standard helps by eliminating this problem.\\
-%Refactor
-It is much faster to refactor a code snippet when you understand its purpose right away.
-
-\subsection{Collective Ownership}
-%Why
-Extreme Programming strives to be efficient.
-Therefore it has adopted a collective approach to ownership, instead of the individual approach.
-Where the individual approach enforces stable code, it also leads to slow changes and less code understanding.
-In contrast the collective approach enforces rapid changes and high quality, given it is used correctly and does not become ``when everybody is responsible, no one is responsible”.
-
-%How/What
-The Collective Ownership works by allowing everybody the rights to change and extend everything.
-However, before any changes are released it has to pass 100\% of the automated tests.
-If it does not pass, the changes will be discarded, and you try again or let someone else try.
-
-%Coherent
-For this to work, it is highly dependent upon the Testing practice, as it is crucial to have very good tests.
-Otherwise the changes might break the system and this risk increases every time a change is introduced without being tested.
-
-\subsection{Continuous Integration}
-%Why
-To avoid wasting time on developing fragmented versions of the same functionality, it is important to integrate at least once a day, often more frequent.
-
-%How/What
-When a pair is done with a task, they sit down and integrate it.
-They then make sure all unit tests run at 100\%.
-If the unit tests does not reach a 100\%, they know it is their task that caused this.
-It is therefore up to them to fix it or discard their solution and try again.
-
-%Coherent
-It is evident that this practice requires the Testing practice to work.
-
-
-\Alexander{Spørgsmål til Ivan: Hvilken struktur er bedst, den lange eller den korte?}
+\paragraph{Continuous Integration} is used to build the solution several times a day.
+This keeps everybody up to date with the latest code changes, avoiding development on fragmented versions.
 
 \paragraph{Metaphor} is used as a shared vision for the project.
 The metaphor is used to standardise the names of variables, methods, and classes. 
