Done comparing xp and scrum

--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -1,5 +1,6 @@
 \section{Extreme Programming versus Scrum}
-The two are quite similar, but there exists some significant differences.
+The two are quite similar, both being agile methodologies with self-organising teams and all. 
+However, there exists some significant differences.
 
 The most significant difference is that Scrum does not have any development practices.
 XP, on the other hand, have plenty of development oriented practices, such as: pair programming, test-driven development, refactoring, automated testing, simple design, and so forth.
