--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -163,4 +163,10 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
     note = "[Online; Accessed 2015-05-19.]"
 }
 
-
+@misc{code:smell,
+    title={CodeSmell},
+    author={Martin Fowler},
+    year={2006},
+    howpublished = "\url{http://martinfowler.com/bliki/CodeSmell.html}",
+    note = "[Online; Accessed 2015-05-22.]"
+}
