--- a/Content/SongScanner/implementation.tex
+++ b/Content/SongScanner/implementation.tex
@@ -14,8 +14,10 @@ The \texttt{SongDatabase} is used to interact with our sqlite database. The data
 \subsection{SongScanner} 
 The \texttt{SongScanner} has two tasks to perform; scan for files and find beat per minute online.
 
-The first task involve a recursive search though selected folders for MP3 files, construct \texttt{Song} objects, then insert them into the database. After the \texttt{Song} object is constructed the \texttt{SongScanner} attempts to extract a cover image from the file and safes the cover in a separate file then adds the cover path to the object. This behaviour reflects the idea that the cover image where supposed to be downloaded online, but that feature failed to emerge as it is common to store album cover in the file. \Kristian{not quite simple design.}
+The first task involve a recursive search though selected folders for MP3 files, construct \texttt{Song} objects, then insert them into the database. After the \texttt{Song} object is constructed the \texttt{SongScanner} attempts to extract a cover image from the file and safes the cover in a separate file then adds the cover path to the object. This behaviour reflects the idea that the cover image where supposed to be downloaded online, but that feature failed to emerge as it is common to store album cover in the file.
 
 \Kristian{todo: skriv noget om hvordan vi finder BPM for songs}
+
+
 
 
