impl song scanner done

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -178,3 +178,11 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
     howpublished = "\url{http://martinfowler.com/bliki/CodeSmell.html}",
     note = "[Online; Accessed 2015-05-22.]"
 }
+
+@misc{echonest:API,
+    title={echonest},
+    author={EchoNest},
+    year={2015},
+    howpublished = "\url{http://developer.echonest.com/index.html}",
+    note = "[Online; Accessed 2015-05-22.]"
+}
