Methodology Observations: A New Start

--- a/Content/Iteration/methodologyObservations1.tex
+++ b/Content/Iteration/methodologyObservations1.tex
@@ -1,5 +1,10 @@
 \subsection{Methodology Observations}\label{sec:release1Methodology}
+In the first iteration, after deciding to use XP, we had to get used to using the XP practices. First of all we needed to prepare issues for the iteration, so we sat down and pretended to be both programmers and customer, talked about some user stories, wrote them down the best we could. We looked at the user stories, turned them into issues, and started a game of planning poker: estimating and prioritising each issue.
 
+Then it was time to sit down and get working. \Dan{Something something pair programming and refactoring}
+%pair programming and refactoring - mention time taking
+
+In the end we found that our estimation of trivial issues (i.e., issues we already knew how to solve and that did not need more than a couple of hours) were fine. On more complex issues, on the other hand, we had trouble, and sometimes we had spend twice as much time as anticipated. This was often the case because the issues required a lot of research or simply were more complex than expected, but on the bright side it gave us some experience we could use for planning the next iterations. We also noted that we worked more hours than expected, but this was not a surprise, as our expectations were set purely based on feeling with no previous experience.
 
 
 %Aside from developing the product, Tempo Player, a lot of energy was spent on considering how XP could be used to make the development process as efficient and controlled as possible. We had a clear goal to create high quality code while also keeping track of the development in a way that would allow us to estimate how long a given addition to the project would take, and decide if it is feasibly to include it in the project based on that estimation.
