--- a/Content/Conclusion/application.tex
+++ b/Content/Conclusion/application.tex
@@ -1,5 +1,4 @@
-\section{Future Work}
-\subsection{Application}
+\section{Application}
 % interval programs
 % offline analysis
 	% minor since we are customers. Why?
@@ -15,9 +14,5 @@
 % true NGUI
 % tactile feedback
 
-\subsection{Extreme Programming}
-% Start over - what do?
-% determine long-term effect of having a coding standard
-%test
-	% mutation test
-% have customer available
+\Ivan{Vedr. GUI: Vi kan diskutere hvor godt det er i forhold til brugbar/ikke brugbar information og feedback. Specielt i forhold til det ikke grafiske ui kan vi overveje en mere klar form for feedback ved f.eks. nummerskift (vibration?).}
+\Ivan{Hvorfor er der settings på main screen}
