Started XP conclusion

--- a/Content/Conclusion/extremeProgramming.tex
+++ b/Content/Conclusion/extremeProgramming.tex
@@ -1,4 +1,8 @@
 \section{Extreme Programming}
+In this section we will try to answer the third problem presented in \Cref{chap:intro}:
+\begin{center}
+	\textit{How do we select and adapt a structured systems development methodology for our project?}
+\end{center}
 % Start over - what do?
 % determine long-term effect of having a coding standard
 %test
