--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -1,12 +1,29 @@
 \section{Adaptation of Extreme Programming}
-This project is developed with an education purpose, to which, some requirements and restrictions exist.
+This project is developed with an education purpose, to which some requirements and restrictions exist.
 Partly due to these requirements and restrictions, we made some adaptations to XP for it to fit inside the project parameters.
 
-...
+\subsection{40-hour Week}
+While we are working on this project, we also follow a range of courses as part of our education.
+As a result of this, our schedule will be fragmented when counting project time.
+We will therefore not be able to use the literal implementation of this practice.
+
+The purpose of this practice was to ensure energetic developers everyday, and not to overwork them to the point of burnout.
+We will implement this purpose by timeboxing the project time.
+This way we will still be able to ensure rested and energetic developers regardless of courses and other non-project matters.
 
 \subsection{Code Standards}
-Due to the huge cost of creating a formal code standard in comparison to the benefits, we chose not to do this.
-We were comfortable with this decision, because we had an informal code standard, due to the fact we had worked together before.
+Creating a formal code standard is a time consuming task.
+We suppose that creating a formal code standard, when we already have an informal code standard, will be too time consuming compared to the benefits.
+We, the team, have previous experience working together.
+It was through these experiences we created and expanded our informal code standard.
+
+\subsection{Collective Ownership}
+
+
+\subsection{Continuous Integration}
+
+
+\subsection{Metaphor}
 
 
 \subsection{On-site Customer}
@@ -14,6 +31,20 @@ Since this is a semester project, we will not have an actual customer.
 In place of the on-site customer we will acts as our own surrogate customer.
 This would mean that we are responsible for the priority and requirements decisions, when we act as the surrogate customer.
 
-...
+\subsection{Pair Programming}
 
+
+\subsection{Planning Game}
+
+
+\subsection{Refactoring}
+
+
+\subsection{Simple Design}
+
+
+\subsection{Small Releases}
+
+
+\subsection{Testing}
 
