--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -32,10 +32,14 @@ Based on this knowledge the second problem can be stated:
 
 %Third Problem - Methodology%
 %\noindent Most large scale software projects fail. 
-\noindent According to \citet{gartner:failure}{} \textit{``A full 66 percent of large scale projects fail ...”}, and although this is not a large scale project, some of the same pitfalls exist.
+\noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail ...”}, and although this is not a large scale project, some of the same pitfalls exist.
 One way to avoid some of these pitfalls, is \textit{``... using a structured systems development methodology ...”}, since it according to \citet{dorsey:methodologyReason} \textit{``... is one of the critical success factors in a systems development project.”}.
+
+We will in this project focus on the development methodology \texttt{Extreme Programming} (XP).
+XP is used because its an interesting methodology and it is development oriented.
+Furthermore, XP's requirements of self-organising teams, iteration length, and team size fit well with this project. 
 Based on this knowledge the third problem can be stated:
 
 \begin{center}
-	\textit{How do we select and adapt a structured systems development methodology for our project?}
+	\textit{How do we adapt the structured systems development methodology, Extreme Programming, to our project?}
 \end{center}
