More xp adaption about code standards

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -14,8 +14,8 @@ This way we will still be able to ensure rested and energetic developers regardl
 \subsection{Code Standards}
 Creating a formal code standard is a time consuming task.
 We suppose that creating a formal code standard, when we already have an informal code standard, will be too time consuming compared to the benefits.
-We, the team, have previous experience working together.
-It was through these experiences we created and expanded our informal code standard.
+The informal code standard have been created and expanded through our previous experiences of working together.
+
 
 \subsection{Collective Ownership}
 
