Xp adaption about continuous integration.

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -16,12 +16,17 @@ Creating a formal code standard is a time consuming task.
 We suppose that creating a formal code standard, when we already have an informal code standard, will be too time consuming compared to the benefits.
 The informal code standard have been created and expanded through our previous experiences of working together.
 
-
 \subsection{Collective Ownership}
-
+???
 
 \subsection{Continuous Integration}
+According to XP this practice should be automated through the setup of a dedicated build server.
+Making this an automated task, should ensure the developers working on the current version.
+However, because this project is relatively small, the build time is at most a few minutes.
+Further, it should not be of a size where there exists several different versions.
+Due to these assumptions, we will manually integrate and build the code on a dedicated branch.
 
+We will do this because it will be too difficult to setup and maintain a build server for a Android project using the Gradle build tool. 
 
 \subsection{Metaphor}
 
