--- a/Content/Conclusion/application.tex
+++ b/Content/Conclusion/application.tex
@@ -1,16 +1,49 @@
 \section{Application}
+%Current State:
+A android application was developed in this project to address the challenge put fourth in \cref{chap:intro}.
+
+%Q1: 
+\begin{center}
+\textit{How can we provide music with an appropriate tempo, compared to the current pace, to the runner through the use of a smartphone?}
+\end{center}
+The application can provide music matching a runners pace. This is achieved by registering steps taken and querying a local music library on the device. This solves our problem as we know the tempo of the song in the library.
+
+While the application can play music and has a good (within 10 percent of target) step detections it has shortcomings: 
+
+The GUI is not fully developed, it is possible to break the positioning of song in the cover flow. Unavailable information such tempo (BPM) makes songs unusable for matching with pace. The selecting of music does not scale well with the size of the music library. A small music library (6 to 10) makes it very hard to match tempo with pace. A Large music library (100+) makes the same 6 to 7 songs repeat, assuming a stable pace.
+
+improvements to the application:
+\begin{itemize}
+\item Reading tempo from file, currently it relies solely on a online API to retrieve tempo.
+\subitem Alternatively analyse music file in order to discover tempo.
+\item Altering tempo live, could be helpful to small libraries.
+\item Manual edit of song data.
+\end{itemize}
+
+
+%Q2:
+\begin{center}
+\textit{How can a smartphone application be operated without disrupting the runner's form and/or concentration?}
+\end{center}
+This is solved by adding a interface, that only relies on touch to be operated. This allows a running people to focus sight on the path ahead instead of a phone. 
+
+
 % interval programs
-% offline analysis
-	% minor since we are customers. Why?
 % online album cover
-% adjust music speed
 % integration with music streaming service
-% settings should be expanded
-	% editing of songs (IDx-tags (bpm etc.))
-	% what more?
 % fix cover flow
 % head phone in / out
 % fixed play
+
+
+%Future Works:
+% offline analysis
+	% minor since we are customers. Why?
+% adjust music speed
+% settings should be expanded
+	% editing of songs (IDx-tags (bpm etc.))
+	% what more?
+
 % true NGUI
 % tactile feedback
 
