--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -32,7 +32,7 @@ Being well rested and energised should reduce the number of mistakes, as well as
 A coding standard ensures all developers write code in the same way.
 This facilitates refactoring, pair programming, and encourages collective ownership.
 
-\paragraph{Collective Ownership} allows all everyone to refactor and review the code.
+\paragraph{Collective Ownership} allows everyone to refactor and review the code.
 When no one person owns part of the code, collaboration is enforces while tedious change request are avoided.
 
 \paragraph{Continuous Integration} is used to build the solution several times a day.
