Removed collective ownership in adaptations

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -16,9 +16,6 @@ Creating a formal code standard is a time consuming task.
 We suppose that creating a formal code standard, when we already have an informal code standard, will be too time consuming compared to the benefits.
 The informal code standard have been created and expanded through our previous experiences of working together.
 
-\subsection{Collective Ownership}
-???
-
 \subsection{Continuous Integration}
 According to XP this practice should be automated through the setup of a dedicated build server.
 Making this an automated task, should ensure the developers working on the current version.
@@ -53,3 +50,11 @@ This would mean that we are responsible for the priority and requirements decisi
 
 \subsection{Testing}
 
+
+
+
+The practices 
+Collective Ownership, 
+XXXX, 
+xXXX
+was adapted as they were described by \cite{Beck}.
