intro for refactoring

--- a/Content/Refactoring/intro.tex
+++ b/Content/Refactoring/intro.tex
@@ -1,1 +1,1 @@
-intro
+Refactoring is important in general, and especially in extreme programming. It makes code more readable and as a result, more maintainable. In this chapter, examples of bad smells are given, and examples of how we attempted to remedy them are detailed in actual code samples from the project. Lastly, our thoughts about refactoring in general, and justifiability of the effort spent refactoring are described.\Christoffer{Er det her bare vand?}
