--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -26,7 +26,7 @@ Based on this knowledge the second problem can be stated:
 
 \begin{center}
 \textit{How can a smartphone application be operated without disrupting the runner's form and/or concentration?}
-\end{center}
+\end{center}\Alexander{Define what ``operated'' means, what operations?}
 \pagebreak
 
 
